--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,11 +1,24 @@
+attrs==21.2.0
 Brotli==1.0.9
 click==8.0.1
+flake8==3.9.2
 Flask==2.0.1
 Flask-Compress==1.10.1
 Flask-Cors==3.0.10
 geojson==2.5.0
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+mccabe==0.6.1
+packaging==21.0
+pluggy==1.0.0
+py==1.10.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+pyparsing==2.4.7
+pytest==6.2.5
+python-dotenv==0.19.0
 six==1.16.0
+toml==0.10.2
 Werkzeug==2.0.1
