--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,6 +6,7 @@ Flask==2.0.1
 Flask-Compress==1.10.1
 Flask-Cors==3.0.10
 geojson==2.5.0
+gunicorn==20.1.0
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
